added link to my github and Linkedin

--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
 
   <nav class="navbar navbar-expand-lg navbar-light bg-light invisible">
           <a class="navbar-brand visible" id="navbar-brand invisible" href="#" style="color: powderblue">Raul Oropesa</a>
+          <a class="github visible"href="https://github.com/Rauloropesa3">@gitHub</a>
+          <a class="linkedIn visible"href="https://www.linkedin.com/in/raojr12lr21af17rf17rioiii21/">@LinkedIn</a>
     <ul class="navbar-nav">
       <li class="nav-item active">
           <a class="nav-link visible" href="index.html" style="color: powderblue"
@@ -33,10 +35,10 @@
     <div class="aboutMe invisible">
       <h2 class="h2 visible">About Me</h2> 
       <hr>
-      <img src="./assets/img/FB_IMG_1570478835170.jpg " class="myImg visible" alt="picture of me">
+      <img src="./assets/img/_oro_ink_.jpg " class="myImg visible" alt="picture of me">
       <p class="card-text visible">I'm out of Los Angeles i entered the realm of software developement, although the path to this
         point has been a struggle i continue to learn. What I didn't know then i know now, so i'm confident that 
-        i will continue to evolve. I think i stubbled upon a new addiction... 
+        i will continue to evolve. I think i stubbled upon a new addiction...
       </p>
     </div>
     <style>
