--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <div class="aboutMe invisible">
       <h2 class="h2 visible">About Me</h2> 
       <hr>
-      <img src="./assets/img/_oro_ink_.jpg" class="myImg visible" alt="picture of me">
+      <img src="assets\img\_oro_ink_.jpg" class="myImg visible" alt="picture of me">
       <p class="card-text visible">I'm out of Los Angeles i entered the realm of software developement, although the path to this
         point has been a struggle i continue to learn. What I didn't know then i know now, so i'm confident that 
         i will continue to evolve. I think i stubbled upon a new addiction...
