--- a/Port.html
+++ b/Port.html
@@ -18,6 +18,7 @@
             <a class="navbar-brand visible" id="navbar-brand invisible" style="color: powderblue;" href="#">Raul Oropesa</a>
             <a class="github visible"href="https://github.com/Rauloropesa3">@gitHub</a>
             <a class="linkedIn visible"href="https://www.linkedin.com/in/raojr12lr21af17rf17rioiii21/">@LinkedIn</a>
+            <a class="myResume visible"href="https://docs.google.com/document/d/1btX-DJg7FpVJJwLP12ncw2JpDO5hVcbkurCUnPvb26o/edit?usp=sharing">@myResume</a>
         <ul class="navbar-nav">
           <li class="nav-item active">
             <a class="nav-link visible" href="index.html" style="color: powderblue">About <span class="sr-only">(current)</span></a>
