--- a/contact.html
+++ b/contact.html
@@ -12,15 +12,15 @@
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light invisible">
          <a class="navbar-brand visible" id="navbar-brand visible" style="color: powderblue;" href="#">Raul Oropesa</a>
+         <a class="github visible"href="https://github.com/Rauloropesa3">@gitHub</a>
+            <a class="linkedIn visible"href="https://www.linkedin.com/in/raojr12lr21af17rf17rioiii21/">@LinkedIn</a>
+            <a class="myResume visible"href="https://docs.google.com/document/d/1btX-DJg7FpVJJwLP12ncw2JpDO5hVcbkurCUnPvb26o/edit?usp=sharing">@myResume</a>
       <ul class="navbar-nav">
         <li class="nav-item active">
           <a class="nav-link visible" style="color: powderblue;" href="index.html">About <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item">
           <a class="nav-link visible" style="color: powderblue;" href="Port.html">Portfolio</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link visible" style="color: powderblue;" href="contact.html">Contact</a>
         </li>
       </ul>
     </nav>
